sassi/tests/compile_fail/watermark_duration.stderr
error[E0277]: the trait bound `Duration: MonotonicWatermark` is not satisfied
 --> tests/compile_fail/watermark_duration.rs:8:24
  |
8 |     assert_watermark::<std::time::Duration>();
  |                        ^^^^^^^^^^^^^^^^^^^ the trait `MonotonicWatermark` is not implemented for `Duration`
  |
  = help: the following other types implement trait `MonotonicWatermark`:
            (A, B)
            (A, B, C)
            (A, B, C, D)
            SystemTime
            i128
            i16
            i32
            i64
          and $N others
note: required by a bound in `assert_watermark`
 --> tests/compile_fail/watermark_duration.rs:5:24
  |
5 | fn assert_watermark<T: MonotonicWatermark>() {}
  |                        ^^^^^^^^^^^^^^^^^^ required by this bound in `assert_watermark`
